--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     def coroutines_version = "1.5.2"
     def activity_version = "1.6.1"
     def fragment_version = "1.5.4"
+    def nav_version = "2.5.3"
 
     implementation "com.google.android.material:material:$material_version"
     implementation "androidx.core:core-ktx:$core_version"
@@ -70,6 +71,10 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
 }
 
 kapt {
