--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     def activity_version = "1.6.1"
     def fragment_version = "1.5.4"
     def nav_version = "2.5.3"
+    def glide_version = "4.14.2"
 
     implementation "com.google.android.material:material:$material_version"
     implementation "androidx.core:core-ktx:$core_version"
@@ -75,6 +76,9 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 }
 
 kapt {
